force-app/main/default/objects/Survey_Response__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>