force-app/main/default/objects/Survey_Response__c/fields/Digital_Location_Version__c.field-meta.xml
<CustomField>
    <fullName>Digital_Location_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Digital Location Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>