force-app/main/default/objects/Survey_Response__c/fields/Free_Text_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Free Text Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>