force-app/main/default/objects/Survey_Response__c/fields/Preferred_Customer_Advice_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Customer_Advice_Method__c</fullName>
    <label>Preferred Customer Advice Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS/Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>