force-app/main/default/objects/Survey_Response__c/fields/QCC_Arrival_Port__c.field-meta.xml
<CustomField>
    <fullName>QCC_Arrival_Port__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>