force-app/main/default/objects/Survey_Response__c/fields/QCC_Cabin_Class__c.field-meta.xml
<CustomField>
    <fullName>QCC_Cabin_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cabin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>