force-app/main/default/objects/Survey_Response__c/fields/QCC_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>QCC_Contact_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>