force-app/main/default/objects/Survey_Response__c/fields/QCC_Crew_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>QCC_Crew_CSAT_Score__c</fullName>
    <label>Crew CSAT Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>