force-app/main/default/objects/Survey_Response__c/fields/QCC_Customer_Service_Feedback__c.field-meta.xml
<CustomField>
    <fullName>QCC_Customer_Service_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Service Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>