force-app/main/default/objects/Survey_Response__c/fields/QCC_Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Airport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>