force-app/main/default/objects/Survey_Response__c/fields/QCC_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>