force-app/main/default/objects/Survey_Response__c/fields/QCC_Flight_Score_Comments__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flight_Score_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Score Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>