force-app/main/default/objects/Survey_Response__c/fields/QCC_Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>QCC_Frequent_Flyer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>