force-app/main/default/objects/Survey_Response__c/fields/QCC_Meals_and_Drinks_Feedback__c.field-meta.xml
<CustomField>
    <fullName>QCC_Meals_and_Drinks_Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meals and Drinks Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>