force-app/main/default/objects/Survey_Response__c/fields/QCC_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>QCC_Party_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>