force-app/main/default/objects/Survey_Response__c/fields/QCC_Post_Flight_Score__c.field-meta.xml
<CustomField>
    <fullName>QCC_Post_Flight_Score__c</fullName>
    <label>Post-Flight Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>