force-app/main/default/objects/Survey_Response__c/fields/QCC_QFF_Program_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>QCC_QFF_Program_CSAT_Score__c</fullName>
    <description>Customer satisfaction rating (between 1 to 5) of Qantas Loyalty benefits</description>
    <label>QFF Program CSAT Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>