force-app/main/default/objects/Survey_Response__c/fields/QCC_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>QCC_Survey_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>