force-app/main/default/objects/Survey_Response__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <label>Survey Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>