force-app/main/default/objects/Survey_Response__c/recordTypes/Freight.recordType-meta.xml
<RecordType>
    <fullName>Freight</fullName>
    <active>true</active>
    <description>Freight</description>
    <label>Freight</label>
</RecordType>