force-app/main/default/objects/Survey_Response__c/recordTypes/Freight_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Freight_Feedback</fullName>
    <active>true</active>
    <description>To capture feedback from Freight.com website and Docket Direct app</description>
    <label>Freight Feedback</label>
</RecordType>