force-app/main/default/objects/Survey_Response__c/recordTypes/Post_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>Post_Case_Survey</fullName>
    <active>true</active>
    <label>Post Case Survey</label>
</RecordType>