force-app/main/default/objects/Survey_Response__c/recordTypes/QCC_Post_Flight_Survey.recordType-meta.xml
<RecordType>
    <fullName>QCC_Post_Flight_Survey</fullName>
    <active>true</active>
    <label>Post Flight Survey</label>
</RecordType>