force-app/main/default/objects/Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QCC_Contact_Method__c</columns>
    <columns>QCC_Flight_Number__c</columns>
    <columns>QCC_Departure_Date__c</columns>
    <columns>QCC_Departure_Airport__c</columns>
    <columns>QCC_Service_CSAT_Score__c</columns>
    <columns>QCC_Survey_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>QCC_Flight_Score_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/18/2026 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>