force-app/main/default/objects/Survey_Response__c/listViews/Freight_Feedback.listView-meta.xml
<ListView>
    <fullName>Freight_Feedback</fullName>
    <columns>Digital_Location__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Star_Rating__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey_Response__c.Freight_Feedback</value>
    </filters>
    <label>Freight Feedback</label>
</ListView>